--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2>My Map</h2>
     <div id="map" class="map"></div>
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
