--- a/index.html
+++ b/index.html
@@ -20,9 +20,24 @@
 
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet' />
   <style>
-    body { margin:0; padding:0; }
+  html, body
+  {
+    height: 100% !important;
+    padding: 0px;
+    margin:0;
 
-    #map { position:absolute; top:0; bottom:0; width:100%; height:700px; margin: 0px; padding: 0px;}
+  }
+
+  .full-height
+  {
+    display:table;
+  }
+
+  .full-height-panel
+  {
+    display:table-cell;
+  }
+    #map { position:absolute; top:0; bottom:0; width:100%; height:900px; margin: 0px; padding: 0px;}
     #map img {
      max-width: none;
      min-width: 0px;
@@ -42,7 +57,10 @@
   height: 60px;
 }
 .topbar .title {
-font-size: 20px;
+  padding-top:5px;
+  padding-bottom: 5px;
+font-size: 24px;
+line-height: 20px;
 
 display: inline;
 }
@@ -78,12 +96,7 @@ padding-right: 0;
     background:#3074a4;
     color:#fff;
     }
-    .search-ui {
-  position:absolute;
-  top:10px;
-  right:10px;
-  z-index:1000;
-  }
+
   .menu-ui {
   background:#fff;
   position:absolute;
@@ -123,19 +136,21 @@ padding-right: 0;
         }
 
 </style>
+<div class="main">
+
 <div class="row fullwidth topbar">
   <div class="large-12 columns">
     <img src="img/nhslogo.png" class="logo"/><div class="title">Find a service</div>
   </div>
 </div>
-<div class="row fullwidth nopad">
-  <div class="large-12 columns mapbox nopad">
+<div class="row fullwidth full-height nopad">
+  <div class="large-12 columns mapbox full-height nopad">
     <div id='map'></div>
     <nav id='menu-ui' class='menu-ui'></nav>
 
   </div>
 </div>
-
+</div>
 
 </body>
 </html>
