--- a/index.html
+++ b/index.html
@@ -1,112 +1,97 @@
 <!DOCTYPE html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" >
-
-<head>
-  <meta charset="utf-8">
-  <!-- If you delete this meta tag World War Z will become a reality -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NHS Map</title>
-
-  <!-- If you are using the CSS version, only link these 2 files, you may add app.css to use for your overrides if you like -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/foundation.css">
-
-
-  <script src="js/vendor/modernizr.js"></script>
-  <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src='main.js'></script>
-
-  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet' />
-  <style>
-  html, body
-  {
+  <head>
+    <meta charset="utf-8">
+    <!-- If you delete this meta tag World War Z will become a reality -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NHS Map</title>
+    <!-- If you are using the CSS version, only link these 2 files, you may add app.css to use for your overrides if you like -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet' />
+    <style>
+    html, body
+    {
     height: 100% !important;
     padding: 0px;
     margin:0;
-
-  }
-
-  .full-height
-  {
+    }
+    .full-height
+    {
     display:table;
-  }
-
-  .full-height-panel
-  {
+    }
+    .full-height-panel
+    {
     display:table-cell;
-  }
+    }
     #map { position:absolute; top:0; bottom:0; width:100%; height:900px; margin: 0px; padding: 0px;}
     #map img {
-     max-width: none;
-     min-width: 0px;
+    max-width: none;
+    min-width: 0px;
     }
-  </style>
-
-</head>
-<body>
-<style>
-.nopad {
-  margin: 0;
-  padding: 0;
-}
-.topbar {
-  background-color: #0071BB;
-  color: #fff;
-  height: 60px;
-}
-.topbar .title {
-  padding-top:5px;
-  padding-bottom: 5px;
-font-size: 24px;
-line-height: 20px;
-
-display: inline;
-}
-.topbar .logo{
-  height: 40px;
-  margin-top: 10px;
-  margin-bottom:10px;
-  margin-right: 10px;
-}
-.fullwidth {
-  width: 100%;
-margin-left: auto;
-margin-right: auto;
-max-width: initial;
-padding-left: 0;
-padding-right: 0;
-}
-.ui-button {
-  background:#3887BE;
-  color:#FFF;
-  display:block;
-  position:absolute;
-  top:50%;left:50%;
-  width:160px;
-  margin:-20px 0 0 -80px;
-  z-index:100;
-  text-align:center;
-  padding:10px;
-  border:1px solid rgba(0,0,0,0.4);
-  border-radius:3px;
-  }
-  .ui-button:hover {
+    </style>
+  </head>
+  <body>
+    <style>
+    .nopad {
+    margin: 0;
+    padding: 0;
+    }
+    .topbar {
+    background-color: #0071BB;
+    color: #fff;
+    height: 60px;
+    }
+    .topbar .title {
+    padding-top:5px;
+    padding-bottom: 5px;
+    font-size: 24px;
+    line-height: 20px;
+    display: inline;
+    }
+    .topbar .logo{
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom:10px;
+    margin-right: 10px;
+    }
+    .fullwidth {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: initial;
+    padding-left: 0;
+    padding-right: 0;
+    }
+    .ui-button {
+    background:#3887BE;
+    color:#FFF;
+    display:block;
+    position:absolute;
+    top:50%;left:50%;
+    width:160px;
+    margin:-20px 0 0 -80px;
+    z-index:100;
+    text-align:center;
+    padding:10px;
+    border:1px solid rgba(0,0,0,0.4);
+    border-radius:3px;
+    }
+    .ui-button:hover {
     background:#3074a4;
     color:#fff;
     }
-
-  .menu-ui {
-  background:#fff;
-  position:absolute;
-  top:10px;right:10px;
-  z-index:1;
-  border-radius:3px;
-  width:120px;
-  border:1px solid rgba(0,0,0,0.4);
-  }
-  .menu-ui a {
+    .menu-ui {
+    background:#fff;
+    position:absolute;
+    top:10px;right:10px;
+    z-index:1;
+    border-radius:3px;
+    width:120px;
+    border:1px solid rgba(0,0,0,0.4);
+    }
+    .menu-ui a {
     font-size:13px;
     color:#404040;
     display:block;
@@ -117,40 +102,43 @@ padding-right: 0;
     text-align:center;
     }
     .menu-ui a:first-child {
-      border-radius:3px 3px 0 0;
-      }
+    border-radius:3px 3px 0 0;
+    }
     .menu-ui a:last-child {
-      border:none;
-      border-radius:0 0 3px 3px;
-      }
+    border:none;
+    border-radius:0 0 3px 3px;
+    }
     .menu-ui a:hover {
-      background:#f8f8f8;
-      color:#404040;
-      }
+    background:#f8f8f8;
+    color:#404040;
+    }
     .menu-ui a.active {
-      background:#3887BE;
-      color:#FFF;
-      }
-      .menu-ui a.active:hover {
-        background:#3074a4;
-        }
-
-</style>
-<div class="main">
-
-<div class="row fullwidth topbar">
-  <div class="large-12 columns">
-    <img src="img/nhslogo.png" class="logo"/><div class="title">Find a service</div>
+    background:#3887BE;
+    color:#FFF;
+    }
+    .menu-ui a.active:hover {
+    background:#3074a4;
+    }
+    </style>
+    <div class="main">
+      <div class="row fullwidth topbar">
+        <div class="large-12 columns">
+          <img src="img/nhslogo.png" class="logo"/><div class="title">Find a service</div>
+        </div>
+      </div>
+      <div class="row fullwidth full-height nopad">
+        <div class="large-11 columns mapbox full-height nopad">
+          <div id='map'></div>
+        <nav id='menu-ui' class='menu-ui'></nav>
+      </div>
+      <div class="large-1 columns">
+        <input type='text' oninput='geocodeThis()' id='search' placeholder="Search for Anything!">
+      </div>
+    </div>
   </div>
-</div>
-<div class="row fullwidth full-height nopad">
-  <div class="large-12 columns mapbox full-height nopad">
-    <div id='map'></div>
-    <nav id='menu-ui' class='menu-ui'></nav>
-
-  </div>
-</div>
-</div>
-
+  <script src="js/vendor/modernizr.js"></script>
+  <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src='main.js'></script>
 </body>
 </html>
