fixing topper and colour of active menu bar

--- a/index.html
+++ b/index.html
@@ -44,20 +44,19 @@
     .topbar {
     background-color: #0071BB;
     color: #fff;
-    height: 60px;
+font-size: 20px;
+
     }
-    .topbar .title {
-    padding-top:5px;
-    padding-bottom: 5px;
-    font-size: 24px;
-    line-height: 20px;
-    display: inline;
-    }
+
     .topbar .logo{
-    height: 40px;
-    margin-top: 10px;
-    margin-bottom:10px;
+    height: 35px;
+    margin-top: 15px;
+    margin-bottom:15px;
     margin-right: 10px;
+    margin-left: 10px;
+    vertical-align: middle;
+
+
     }
     .fullwidth {
     width: 100%;
@@ -94,9 +93,9 @@
     width:300px;
     }
     .menu-ui a {
-      background: #0071BB;
+      background: #fff;
     font-size:13px;
-    color:#fff;
+    color:#0071BB;
     display:block;
     margin:0;padding:0;
     padding:10px;
@@ -125,7 +124,7 @@
     <div class="main">
       <div class="row fullwidth topbar">
         <div class="large-12 columns">
-          <img src="img/nhslogo.png" class="logo"/><div class="title">Find a service</div>
+       <img src="img/nhslogo.png" class="logo"/>Find a service
         </div>
       </div>
       <div class="row fullwidth full-height nopad">
