changed map selection color

--- a/index.html
+++ b/index.html
@@ -110,16 +110,21 @@
     .menu-ui a:last-child {
     border:none;
     }
-    .menu-ui a:hover {
+
+    .menu-ui a {
+      background: #579ef7;
+    }
+
+    /*.menu-ui a:hover {
     background:#f8f8f8;
     color:#404040;
-    }
+    }*/
     .menu-ui a.active {
     background:#0071BB;
     color:#FFF;
     }
     .menu-ui a.active:hover {
-    background:#0071BB;
+    background:#59a3ff;
     }
     </style>
     <div class="main">
