add full foundation

--- a/entity.html
+++ b/entity.html
@@ -188,6 +188,9 @@ z-index: 0;
       font-weight: bold;
       color: #AF1324;
     }
+    table {
+      border: none;
+    }
     </style>
     <div class="main">
       <div class="wrapper">
@@ -219,8 +222,13 @@ SE5 9RS</p>
       <div class="large-4 columns">
         <iframe width='100%' height='350px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/sheldonline.m730lkg0/attribution,zoompan,zoomwheel,share.html?access_token=pk.eyJ1Ijoic2hlbGRvbmxpbmUiLCJhIjoiRVRIYlNIYyJ9.3hMiE63z6mxyBBPe1-mxiQ'></iframe></div>
     </div>
-
     <div class="row">
+      <div class="large-12 columns">
+        <hr/>
+</div>
+</div>
+    <div class="row">
+
       <div class="large-8 columns">
 
 
@@ -243,6 +251,21 @@ SE5 9RS</p>
 
       </div>
       </div>
+      <div class="row">
+        <div class="large-8 columns">
+          <strong>Information about this hospital</strong>
+          <hr/>
+        <table width="100%">
+
+<tr><td width="60%">A and E performance</td><td width="40%">100%</td></tr>
+<tr><td width="60%">Agency staff as a percentage of average expenditure</td><td width="40%">3%</td></tr>
+<tr><td width="60%">Choice of breakfast</td><td width="40%">2</td></tr>
+<tr><td width="60%">Choice of food</td><td width="40%">87.01%</td></tr>
+
+</table>
+        </div>
+
+        </div>
 
     <div class="wrapperbottom">
     <div class="row">
