--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     #search {
       position:absolute; top:100; left:0; margin: 20px; padding: 5px; z-index: 60000000; width: 300px; text-size: 20px;
     }
+
+    .leaflet-popup-content > a.button.small {
+      color: white;
+    }
     </style>
   </head>
   <body>
